fixup! squash! Bug 31286: Implementation of bridge, proxy, and firewall settings in about:preferences#connection
Bug 40897: limit the extent of the "Show All Bridges" fade

--- a/browser/components/torpreferences/content/torPreferences.css
+++ b/browser/components/torpreferences/content/torPreferences.css
@@ -193,7 +193,7 @@ html:dir(rtl) input[type="checkbox"].toggle-button::before {
 }
 
 #torPreferences-currentBridges-cards.list-collapsed {
-  mask-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.1));
+  mask-image: linear-gradient(rgb(0, 0, 0) 0% 75%, rgba(0, 0, 0, 0.1));
 }
 
 #torPreferences-currentBridges-cards.disabled {
